# MaternAI

./: .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  openapi.yaml
dashboard/: .env  .env.production  index.html  package.json  tailwind.config.js
dashboard/src/: App.tsx  index.css  react-app-env.d.ts
dashboard/src/components/: EdgeController.tsx  RiskGrid.tsx  SystemBar.tsx  TelemetryCluster.tsx  VitalsLog.tsx  VitalsWaveform.tsx
include/: hardware_utils.hpp
include/maternai/: hazard_pointers.hpp  lockfree_logger.hpp  performance_metrics.hpp  risk_engine.hpp  slab_allocator.hpp  types.hpp  vitals_disruptor.hpp  vitals_receiver.hpp
src/: benchmarks.cpp  main.cpp  risk_engine.cpp  test_engine.cpp
